[package]
name = "axum-sessions"
version = "0.4.0"
description = "🥠 Cookie-based sessions for Axum via async-session."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-sessions"
license = "MIT"
keywords = ["axum", "session", "sessions", "cookie", "async-session"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/axum-sessions"

[dependencies]
async-session = "3.0.0"
futures = "0.3.21"
http-body = "0.4.5"
tower = "0.4.12"
tracing = "0.1"

[dependencies.axum]
version = "0.5.7"
features = ["headers"]

[dependencies.axum-extra]
version = "0.3.4"
features = ["cookie-signed"]

[dependencies.tokio]
version = "1.20.1"
default-features = false
features = ["sync"]

[dev-dependencies]
http = "0.2.8"
hyper = "0.14.19"
serde = "1.0.147"

[dev-dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[dev-dependencies.tokio]
version = "1.20.1"
default-features = false
features = ["macros", "rt-multi-thread"]
