[package]
name = "example-counter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.0"
axum-sessions = { path = "../../" }
async-session-memory-store = { workspace = true }

[dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
